--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "PLSR12",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "uuid": "^8.3.2"
   },
